# HW_WEB_09

./: pyproject.toml
Scraping/: authors.json  main.py  models.py
